# clone-twitter-backend

./: README.md  pyproject.toml
ProjetoFinal/: apps.py  asgi.py  settings.py  urls.py  wsgi.py
cadastro/: admin.py  urls.py
cadastro/migrations/: 0001_initial.py  0002_rename_profile_user_profile_user_and_more.py  0003_alter_profile_id.py  0004_alter_profile_avatar.py  0005_profile_profile_connections.py
cadastro/models/: profile.py
cadastro/serializers/: __init__.py  profile_serialize.py  user_serializers.py
cadastro/viewsets/: __init__.py  profile_viewsets.py  user_viewsets.py
feed/: admin.py  urls.py
feed/migrations/: 0001_initial.py  0002_alter_post_user_id.py  0003_iteracao_curtida.py  0004_rename_criado_em_curtida_curtida_criada.py  0005_remove_iteracao_post_id_remove_iteracao_profile_id_and_more.py  0006_iteracao_curtida.py  0007_remove_iteracao_post_id_remove_iteracao_user_id_and_more.py  0008_iteracao_curtida.py
feed/models/: __init__.py  iteracao.py  post.py
feed/serializers/: __init__.py  iteracao_serializer.py  posts_serializers.py
feed/viewsets/: __init__.py  iteracao_viewset.py  post_viewsets.py
